tests/snapshots/run_wpt_conformance__coreml_reshape__unsqueeze__float32_2D_tensor_by_adding_one_dimension.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (unsqueeze) float32 2D tensor by adding one dimension",
    "coreml",
    "PASS",
)
