tests/snapshots/run_wpt_conformance__coreml_reshape__unsqueeze__float32_5D_tensor_by_adding_4th_dimension.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reshape.https.any.js reshape (unsqueeze) float32 5D tensor by adding 4th dimension, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reshape: Rank of the shape parameter must be between 0 and 5 (inclusive) in reshape

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reshapeInput: f32[2, 1, 4, 3, 1];
  }

  nodes {
    [reshapeOutput] = reshape(reshapeInput, label="");
  }

  outputs { reshapeOutput; }
}
